<resources>
    <string name="app_name">Special Invite</string>
    <!--<string name="google_app_id">1:735000862999:android:e383b5d137dbd845</string>-->
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="invite_header">Wedding Invitation</string>
    <string name="omGanesha">Om Ganeshaya Namaha</string>
    <string name="invite_txt">Union of two unknown souls written right from birth, on the rotating wheels of life. \n
        The time has come for two hearts to get close together to share every moment of their life.
    </string>
    <string name="and">&amp;</string>
    <string name="family1">Mr. T. Kannan &amp; Mrs. K. Nirmala </string>
    <string name="family2">Mr. S. Vairamuthu &amp; Mrs. V. Muthulakshmi </string>
    <string name="jointInvite">jointly invites you and your family  for the wedding occasion of </string>
    <string name="bride_name">K. Janani</string>
    <string name="bride_degree"> B.Com(Hons.), MBA.,</string>
    <string name="groom_name">V. Muthuraj</string>
    <string name="groom_degree"> B.Tech.,</string>
    <string name="groom_occupation">(Engineer, MIL India Pvt. Ltd., Noida)</string>
    <string name="wedding_hall">Ramadhari Marriage Hall, </string>
    <string name="wedding_addr">Rajapalayam.</string>
    <string name="reception_hall">Sri GangaRam Hall,</string>
    <string name="reception_addr">No.53, Arcot Road, Kodambakkam,</string>
    <string name="reception_city">Chennai - 600 024.</string>
    <string name="reception_time">between 7.00 p.m. and 9.00 p.m.,</string>
    <string name="reception_date">On Friday, 9th February 2018,</string>
    <string name="wedding_date">On Sunday, 4th February 2018,</string>
    <string name="with">with</string>
    <string name="muhurtham"><u>Muhurtham</u></string>
    <string name="reception"><u>Reception</u></string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="wedding_invite">A Special Invite</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">openDrawer</string>
    <string name="navigation_drawer_close">closeDrawer</string>
    <string name="no_title"></string>
</resources>
